# XorFileProcessor

./: .gitignore  CMakeLists.txt  Main.qml  README.md  backend.cpp  backend.h  fileprocessor.cpp  fileprocessor.h  main.cpp
